--- a/index.html
+++ b/index.html
@@ -26,15 +26,13 @@
 
   <main>
     <section class="product-container">
-      <button id = image-main>
-        <img src="images/image-product-1.jpg" alt="sneaker-1">
-      </button>
+      <img id ="image-main" src="images/image-product-1.jpg"  >
 
       <div class="image-group">
-        <button id="image-1" class="thumbnal"></button>
-        <button></button>
-        <button></button>
-        <button></button>
+        <img src="images/image-product-1-thumbnail.jpg" id="thumbnail-1" class="thumbnail">
+        <img src="images/image-product-2-thumbnail.jpg" id="thumbnail-2" class="thumbnail"></img>
+        <img src="images/image-product-3-thumbnail.jpg" id="thumbnail-3" class="thumbnail"></img>
+        <img src="images/image-product-4-thumbnail.jpg" id="thumbnail-4" class="thumbnail"></img>
       </div>
     </section>
 
@@ -60,7 +58,7 @@
       </div>
 
       <div class="cart-section">
-        <div class="change-product-amount"></div>
+        <div class="amount-in-cart"></div>
         <button id="add-to-cart"></button>
       </div>
     </section>
