switch large image and overlay thumbnail

--- a/index.html
+++ b/index.html
@@ -42,10 +42,26 @@
       </div>
       
       <div class="thumbnail-group">
-        <img src="images/image-product-1-thumbnail.jpg" id="1" class="thumbnail">
-        <img src="images/image-product-2-thumbnail.jpg" id="2" class="thumbnail">
-        <img src="images/image-product-3-thumbnail.jpg" id="3" class="thumbnail">
-        <img src="images/image-product-4-thumbnail.jpg" id="4" class="thumbnail"> 
+        <div class="thumbnail-container" id ="product-1">
+          <img src="images/image-product-1-thumbnail.jpg" class="thumbnail">
+          <div class="overlay"></div>
+        </div>
+
+        <div class="thumbnail-container" id ="product-2">
+          <img src="images/image-product-2-thumbnail.jpg" class="thumbnail">
+          <div class="overlay"></div>
+        </div>
+
+        <div class="thumbnail-container" id ="product-3">
+          <img src="images/image-product-3-thumbnail.jpg" class="thumbnail">
+          <div class="overlay"></div>
+        </div>
+
+        <div class="thumbnail-container" id ="product-4">
+          <img src="images/image-product-4-thumbnail.jpg" class="thumbnail">
+          <div class="overlay"></div>
+        </div>
+
       </div>
     </section>
 
