--- a/index.html
+++ b/index.html
@@ -109,6 +109,34 @@
 
     </section>
   </main>
+
+
+  <dialog class="galleryModal" id="galleryModal">
+    <div class="modal-main-img-container">
+      <img id ="modal-img-main" src="images/image-product-1.jpg">
+    </div>
+    
+    <div class="modal-thumbnail-group">
+      <div class="modal-thumbnail-container" id ="product-1">
+        <img src="images/image-product-1-thumbnail.jpg" class="thumbnail">
+        <div class="overlay"></div>
+      </div>
+
+      <div class="modal-thumbnail-container" id ="product-2">
+        <img src="images/image-product-2-thumbnail.jpg" class="thumbnail">
+        <div class="overlay"></div>
+      </div>
+
+      <div class="modal-thumbnail-container" id ="product-3">
+        <img src="images/image-product-3-thumbnail.jpg" class="thumbnail">
+        <div class="overlay"></div>
+      </div>
+
+      <div class="modal-thumbnail-container" id ="product-4">
+        <img src="images/image-product-4-thumbnail.jpg" class="thumbnail">
+        <div class="overlay"></div>
+      </div>
+  </dialog>
   
 
   <div>
