--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Frontend Mentor | E-commerce product page</title>
 </head>
 
-<body>
+<body id="body">
 
   <header>
     <div class="logo">
@@ -112,8 +112,18 @@
 
 
   <dialog class="galleryModal" id="galleryModal">
+    <svg id="close-modal" class="close-modal" width="14" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill-rule="evenodd"/></svg>
+
     <div class="modal-main-img-container">
       <img id ="modal-img-main" src="images/image-product-1.jpg">
+
+      <div id="previous">
+        <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill-rule="evenodd"/></svg>
+      </div>
+
+      <div id="next">
+        <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill-rule="evenodd"/></svg>
+      </div>
     </div>
     
     <div class="modal-thumbnail-group">
