mobile whole layout

--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
     <section class="product-container">
       <div class="main-image-container">
         <img id ="image-main" src="images/image-product-1.jpg">
+
+        <div id="previous-mobile">
+          <svg id="previous-icon-mobile" width="12" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 1 3 9l8 8" stroke-width="3" fill-rule="evenodd"/></svg>  
+        </div>
+
+        <div id="next-mobile">
+          <svg id="next-icon-mobile" width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path d="m2 1 8 8-8 8" stroke-width="3" fill="none" fill-rule="evenodd"/></svg> 
+        </div>
       </div>
       
       <div class="thumbnail-group">
